--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-09 10:37+0200\n"
+"PO-Revision-Date: 2010-06-09 10:38+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -1981,7 +1981,7 @@ msgstr "Смяна на паролата"
 #: libraries/display_change_password.lib.php:35
 #: libraries/replication_gui.lib.php:345 server_privileges.php:807
 msgid "No Password"
-msgstr "Няма парола"
+msgstr "Без парола"
 
 #: libraries/display_change_password.lib.php:41
 #: libraries/replication_gui.lib.php:59 libraries/replication_gui.lib.php:60
