--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-04 22:01+0200\n"
+"PO-Revision-Date: 2010-06-09 10:42+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -4407,10 +4407,9 @@ msgid "Jump to database"
 msgstr "Jump to database"
 
 #: server_databases.php:267
-#, fuzzy
 #| msgid "Master replication"
 msgid "Not replicated"
-msgstr "Master replication"
+msgstr "Not replicated"
 
 #: server_databases.php:273
 #, fuzzy
@@ -8336,124 +8335,3 @@ msgstr "VIEW name"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "Rename view to"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Add new field"
-
-#~ msgid "Field"
-#~ msgstr "Field"
-
-#~ msgid "Records"
-#~ msgstr "Records"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Fields terminated by"
-
-#~ msgid "Fields"
-#~ msgstr "Fields"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "Add %s field(s)"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Field %s has been dropped"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "See image/jpeg: inline"
-
-#~ msgid "zipped"
-#~ msgstr "zipped"
-
-#~ msgid "gzipped"
-#~ msgstr "gzipped"
-
-#~ msgid "bzipped"
-#~ msgstr "bzipped"
-
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-
-#~ msgid "and"
-#~ msgstr "and"
-
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Disabled"
-
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Enabled"
-
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Repair"
-
-#~ msgid "Calendar"
-#~ msgstr "Calendar"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 compatible"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Could not load default configuration from: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Create an index on&nbsp;%s&nbsp;columns"
-
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Create table"
-
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "None"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Flush the table (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Invalid server index: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Description"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "None"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Schema of the \"%s\" database - Page %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "The \"%s\" table doesn't exist!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-
-#~ msgid "running on %s"
-#~ msgstr "running on %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "The scale factor is too small to fit the schema on one page"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
