--- a/po/cy.po
+++ b/po/cy.po
@@ -5679,100 +5679,101 @@ msgstr ""
 #: setup/frames/index.inc.php:87 setup/frames/menu.inc.php:17
 #: setup/lib/messages.inc.php:219
 msgid "Overview"
-msgstr ""
+msgstr "Gorolwg"
 
 #: setup/frames/index.inc.php:95 setup/lib/messages.inc.php:337
 msgid "Show hidden messages (#MSG_COUNT)"
-msgstr ""
+msgstr "Dangos negeseuon cudd (#MSG_COUNT)"
 
 #: setup/frames/index.inc.php:135 setup/lib/messages.inc.php:213
 msgid "There are no configured servers"
-msgstr ""
+msgstr "Nid oes unrhyw gweinyddion a ffurfweddwyd"
 
 #: setup/frames/index.inc.php:143 setup/lib/messages.inc.php:212
 msgid "New server"
-msgstr ""
+msgstr "Gweinydd newydd"
 
 #: setup/frames/index.inc.php:172 setup/lib/messages.inc.php:50
 msgid "Default language"
-msgstr ""
+msgstr "Iaith ddiofyn"
 
 #: setup/frames/index.inc.php:182 setup/lib/messages.inc.php:187
 msgid "let the user choose"
-msgstr ""
+msgstr "gadewch i'r defnyddiwr ddewis"
 
 #: setup/frames/index.inc.php:193 setup/lib/messages.inc.php:216
 msgid "- none -"
-msgstr ""
+msgstr "-dim-"
 
 #: setup/frames/index.inc.php:196 setup/lib/messages.inc.php:51
 msgid "Default server"
-msgstr ""
+msgstr "Gweinydd diofyn"
 
 #: setup/frames/index.inc.php:206 setup/lib/messages.inc.php:66
 msgid "End of line"
-msgstr ""
+msgstr "Diwedd y llinell"
 
 #: setup/frames/index.inc.php:211 setup/lib/messages.inc.php:61
 msgid "Display"
-msgstr ""
+msgstr "Dangos"
 
 #: setup/frames/index.inc.php:215 setup/lib/messages.inc.php:190
 msgid "Load"
-msgstr ""
+msgstr "llwytho"
 
 #: setup/frames/index.inc.php:226 setup/lib/messages.inc.php:152
 msgid "phpMyAdmin homepage"
-msgstr ""
+msgstr "hafan phpMyAdmin"
 
 #: setup/frames/index.inc.php:227 setup/lib/messages.inc.php:64
 msgid "Donate"
-msgstr ""
+msgstr "Rhodd"
 
 #: setup/frames/index.inc.php:228 setup/lib/messages.inc.php:370
 msgid "Check for latest version"
-msgstr ""
+msgstr "Gwiriwch y fersiwn diweddaraf"
 
 #: setup/frames/menu.inc.php:18 setup/lib/messages.inc.php:137
 msgid "Features"
-msgstr ""
+msgstr "Nodweddion"
 
 #: setup/frames/menu.inc.php:19 setup/lib/messages.inc.php:113
 msgid "Navigation frame"
-msgstr ""
+msgstr "Ffrâm llywio"
 
 #: setup/frames/menu.inc.php:20 setup/lib/messages.inc.php:118
 msgid "Main frame"
-msgstr ""
+msgstr "Prif ffrâm"
 
 #: setup/frames/servers.inc.php:28 setup/lib/messages.inc.php:272
 msgid "Edit server"
-msgstr ""
+msgstr "Golygu gweinydd"
 
 #: setup/frames/servers.inc.php:37 setup/lib/messages.inc.php:241
 msgid "Add a new server"
-msgstr ""
+msgstr "Ychwanegwch weinydd newydd"
 
 #: setup/lib/FormDisplay.class.php:458 setup/lib/messages.inc.php:76
 msgid "Incorrect value"
-msgstr ""
+msgstr "Gwerth anghywir"
 
 #: setup/lib/FormDisplay.tpl.php:182 setup/lib/messages.inc.php:328
 #, php-format
+#, possible-php-format
 msgid "Set value: %s"
-msgstr ""
+msgstr "Gosod gwerth: %s"
 
 #: setup/lib/FormDisplay.tpl.php:187 setup/lib/messages.inc.php:234
 msgid "Restore default value"
-msgstr ""
+msgstr "Adfer gwerth diofyn"
 
 #: setup/lib/form_processing.lib.php:43 setup/lib/messages.inc.php:377
 msgid "Warning"
-msgstr ""
+msgstr "Rhybudd"
 
 #: setup/lib/messages.inc.php:16
 msgid "Allow character set conversion"
-msgstr ""
+msgstr "Caniatáu trosi set nodau"
 
 #: setup/lib/messages.inc.php:17
 msgid ""
@@ -5791,7 +5792,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:19
 msgid "Allow login to any MySQL server"
-msgstr ""
+msgstr "Caniatáu mewngofnodi i unrhyw weinydd MySQL"
 
 #: setup/lib/messages.inc.php:20
 msgid "Show &quot;Drop database&quot; link to normal users"
