--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-10 21:13+0200\n"
+"PO-Revision-Date: 2010-06-10 21:14+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -1554,7 +1554,7 @@ msgstr "phpMyAdmin документация"
 #: libraries/auth/cookie.auth.lib.php:258
 #: libraries/auth/cookie.auth.lib.php:259
 msgid "You can enter hostname/IP address and port separated by space."
-msgstr ""
+msgstr "Можете да въведете хост/IP адрес и порт, разделени с интервал."
 
 #: libraries/auth/cookie.auth.lib.php:258
 msgid "Server:"
