--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-10 21:16+0200\n"
+"PO-Revision-Date: 2010-06-10 21:18+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -4918,7 +4918,7 @@ msgstr ""
 
 #: server_privileges.php:2033
 msgid "Database for user"
-msgstr ""
+msgstr "База от данни за потребителя"
 
 #: server_privileges.php:2037
 #, fuzzy
